--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,10 @@ jobs:
           node-version: '14'
 
       - name: Install dependencies
-        run: npm install
+       
+        run: |
+          cd hack
+          npm install
 
       - name: Build app
         run: |
