--- a/hack/package.json
+++ b/hack/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:web": "expo build:web",
+    "build:android": "expo build:android",
+    "build:ios": "expo build:ios"
 
   },
   "dependencies": {
