--- a/hack/package.json
+++ b/hack/package.json
@@ -7,9 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build:web": "expo build:web",
-    "build:android": "expo build:android",
-    "build:ios": "expo build:ios"
+    "build:web": "npx expo export -p web",
+    "build:android": "npx expo export -p android",
+    "build:ios": "npx expo export -p android"
 
   },
   "dependencies": {
