--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build app for web
         run: |
           cd hack
-          npm run build
+          npm run build:web
 
       - name: Upload to S3
         uses: jakejarvis/s3-sync-action@master
